# programming

./: .gitignore
C_C++/ALGO2_LAB01/: 55552.algo2.lab01.main.cpp  CMakeLists.txt  LAB01  compile_commands.json  lista.h
C_C++/ALGO2_LAB02/: 55552.algo2.lab02.main.cpp  CMakeLists.txt  DynamicArray.h
C_C++/ALGO2_LAB03/: BST.h  CMakeLists.txt  main.cpp
C_C++/ALGO2_LAB04/: 55552.algo2.lab04.main.cpp  CMakeLists.txt  RBTree.h  compile_commands.json
C_C++/ALGO2_LAB05/: 55552.algo2.lab05.main.cpp  CMakeLists.txt  Heap.h  graph.dot
C_C++/ALGO2_LAB06/: 55552.algo2.lab06.main.cpp  CMakeLists.txt  LAB06.out
C_C++/ALGO2_LAB07/: 55552.algo2.lab07.main.cpp  CMakeLists.txt
C_C++/ALGO2_LAB08/: 55552.algo2.lab08.main.cpp  CMakeLists.txt  a.out  compile_commands.json  graph1.dot  graph2.dot  graph3.dot
C_C++/ALGO2_LAB09/: 55552.algo2.lab09.main.cpp  CMakeLists.txt  compile_commands.json  dot.dot  dot2.dot  dot3.dot  dot4.dot  dot5.dot
C_C++/ALGO2_LAB10/: 55552.algo2.lab10.main.cpp  CMakeLists.txt  FST.py  compile_commands.json
C_C++/Obliczarka/: CMakeLists.txt  compile_commands.json  main.cpp
C_C++/SDL_movement/: Snake.cpp  main.cpp
C_C++/SO08/: 55552.so.lab08.c  CMakeLists.txt
C_C++/SO09/: 55552.so.lab09.c
C_C++/SO10/: 55552.so.lab10.c  CMakeLists.txt
C_C++/SO11/: 55552.so.lab11.c
C_C++/SO12/: 55552.so.lab12r.c  55552.so.lab12s.c
C_C++/SO13/: 55552.so.lab13r.c  55552.so.lab13s.c
C_C++/Snake/: .gitignore  CMakeLists.txt  Snake.cpp  main.cpp
C_C++/Snake/.zed/: debug.json
C_C++/Test/: CMakeLists.txt  main.cpp
MatLab/: LAB10.m  LAB14.m  LAB16.m
(+74 files in other folders)
